--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ modules/
 web/themes/contrib/
 
 # Ignore configuration files that may contain sensitive information.
-sites/*/settings*.php
-sites/*/services*.yml
+web/sites/*/settings*.php
+web/sites/*/services*.yml
 
 # Ignore paths that contain user-generated content.
 sites/*/files
